Multi-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multicontainer-pod
spec:
  containers:
    - name: container1
      image: httpd:2.4
    - name: container2
      image: redis
