config-map-volume.yaml

apiVersion: v1
kind: Pod
metadata:
  name: prod-nginx
  labels:
    app: prod-nginx
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
    volumeMounts:
    - name: config-volume
      mountPath: /usr/share/nginx/html
  volumes:
  - name: config-volume
    configMap:
      name: prod
      items:
      - key: prod.html
        path: index.html
