health-check.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-frontend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: myapp-container
        image: nginx
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          timeoutSeconds: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-frontend-app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: myapp-container
        image: nginx
        livenessProbe:
          httpGet:
            path: /abc
            port: 80
          initialDelaySeconds: 10
          timeoutSeconds: 5
