namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production

---

apiVersion: v1
kind: Pod
metadata:
  name: production-pod
  namespace: production
  labels:
    app: production-pod
spec:
  containers:
  - name: prod-container
    image: nginx
