node-name.yaml
apiVersion: v1
kind: Pod
metadata:
  name: node-name-pod
spec:
 nodeName: worker2
 containers:
 - name: nginx-container
   image: nginx
