pv-dynamic.yaml

apiVersion: v1
kind: Pod
metadata:
  name: dynamic-pv-pod
spec:
  volumes:
    - name: task-pv-storage
      persistentVolumeClaim:
        claimName: dynamic-pv-claim
  containers:
    - name: dynamic-pv-container
      image: nginx
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: task-pv-storage
