resource-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rsu-pod1
  labels:
    env: dev
    a: b
spec:
  containers:
    - name: container1
      image: httpd:2.4
      resources:
        requests:
          cpu: "0.10"
          memory: "100M"
        limits:
          cpu: "1"
          memory: "500M"
---
apiVersion: v1
kind: Pod
metadata:
  name: rsu-pod2
  labels:
    env: dev
    a: b
spec:
  containers:
    - name: container1
      image: httpd:2.4
      resources:
        requests:
          cpu: "4"
          memory: "100M"
        limits:
          cpu: "4"
          memory: "500M"
