secret-env.yaml

apiVersion: v1
kind: Pod
metadata:
 name: myapp-pod2
 labels:
   app: myapp
   type: front-end
spec:
  containers:
  - name: httpd-container
    image: httpd
