secret-volume.yaml

apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    app: myapp
spec:
  containers:
  - name: httpd-container
    image: httpd
    volumeMounts:
    - name: credentials
      mountPath: /tmp/creds
      readOnly: true
  volumes:
  - name: credentials
    secret:
      secretName: mysecret
