taint.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
   env: test
spec:
 containers:
 - name: nginx
   image: nginx
 tolerations:
 - key: "env"
   operator: "Equal"
   value: "prod"
   effect: "NoSchedule
