cluster-ip.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
  labels:
    app: backend-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend-deploy
  template:
    metadata:
      labels:
        app: backend-deploy
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
 labels:
   app: backend-deploy
   name: backend-service
spec:
  selector:
   app: backend-deploy 
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
