loadbalancer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
  labels:
    app: frontend-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend-deploy
  template:
    metadata:
      labels:
        app: frontend-deploy
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
 labels:
   app: frontend-deploy
   name: frontend-service
spec:
  type: LoadBalancer
  selector:
   app: frontend-deploy 
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
