node-port.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-deploy
  labels:
    app: prod-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: prod-deploy
  template:
    metadata:
      labels:
        app: prod-deploy
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
 labels:
   app: prod-deploy
   name: prod-service
spec:
  type: NodePort
  selector:
   app: prod-deploy 
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30010
