network-policy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: network1

---

apiVersion: v1
kind: Pod
metadata:
  name: network1-pod
  namespace: network1
  labels:
    app: network1-pod
spec:
  containers:
  - name: network1-container
    image: nginx

---

apiVersion: v1
kind: Namespace
metadata:
  name: network2

---

apiVersion: v1
kind: Pod
metadata:
  name: network2-pod
  namespace: network2
  labels:
    app: network2-pod
spec:
  containers:
  - name: network2-container
    image: nginx

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy
  namespace: network1
spec:
  podSelector:
    matchLabels:
      run: network1-pod
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: network2
      podSelector:
        matchLabels:
          run: network2-pod
    ports:
    - protocol: TCP
      port: 80
